# resumable

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LANGUAGE.md  Makefile  STYLE_GUIDELINES.md  ast_programs.py  demo.py  pyproject.toml  resumable.py
src/: ast_expressions.py  resumable.py  writer.py
src/resumable/: ast_expressions.py  ast_programs.py  demo.py  resumable.py  runtime.py  snippets.py  writer.py
src/resumable/frontend/: __init__.py  ast_expressions.py  ast_statements.py  grammar.lark  parser.py  semantic.py
src/resumable/repl/: __init__.py  __main__.py  app.py  highlighting.py
src/resumable/runtime/: __init__.py  core.py  expression_evaluator.py  generator.py  generator_compiler.py  interpreter.py  statement_executor.py  stdlib.py
tests/: helpers.py  test_additional_behaviors.py  test_arguments.py  test_conditionals.py  test_env.py  test_functions.py  test_generators.py  test_imports.py  test_interpreter.py  test_lifecycle.py  test_loops.py  test_parser.py  test_repl.py  test_resumable.py  test_return.py  test_runtime_edges.py  test_scopes.py  test_semantic.py  test_yield.py
